# speaker

./: .gitignore  copy_CMakeLists.txt  speaker.pro
Client/: CMakeLists.txt  Client.pro  copy_CMakeLists.txt  main.cpp  socketclient.cpp  socketclient.h
Control/: CMakeLists.txt  Control.pro  book.cpp  book.h  command.cpp  command.h  saved_container.h  socket.cpp  socket.h  sslworker.cpp  sslworker.h
Interface/: CMakeLists.txt  Interface.pro  abiglobal.h  abstractcommand.cpp  abstractcommand.h  abstractobject.cpp  abstractobject.h  copy_CMakeLists.txt  generator.cpp  generator.h  ifactory.cpp  ifactory.h  scenario.cpp  scenario.h  scenarioid.h  singleton.h  source.h
Server/: CMakeLists.txt  Server.pro  main.cpp  socketserver.cpp  socketserver.h
creator_ebook/: bookconvector.cpp  bookconvector.h  copy_CMakeLists.txt  creator_ebook.pro  languagedetector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocrreader.cpp  ocrreader.h  page_main.cpp  page_main.h  page_main.ui  pdfreader.cpp  pdfreader.h
